Fix status gap

--- a/src/javascript/JContent/actions/editImage/ImageEditorDialog/ImageEditorDialog.scss
+++ b/src/javascript/JContent/actions/editImage/ImageEditorDialog/ImageEditorDialog.scss
@@ -39,7 +39,7 @@
 }
 
 .chip {
-    margin-left: var(--spacing-medium);
+    margin-left: var(--spacing-nano);
 }
 
 .actions.actions {
